# sponsor-block-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: integrity.yml
src/: api.rs  client.rs  error.rs  gen_user_id.rs  lib.rs  util.rs
src/client/: mod.rs  user.rs  vip.rs
src/client/admin/: mod.rs
src/client/user/: api_status.rs  mod.rs  segments.rs  user_info.rs  user_stats.rs
src/segment/: action.rs  category.rs  mod.rs
